fix(pipeline): sync AnalyticsService methods and expand domain encryption